# Pos_Tech_Machine_Learning_Engineer

./: main.py  pyproject.toml  requirements.txt
meu_projeto/: pyproject.toml
public/: index.html
public/data/: books.csv
tech_challenge/: vercel.json
tech_challenge/api/: __init__.py  config.py  main.py  routes.py
tech_challenge/api/data/: books.csv
tech_challenge/frontend/: index.html
tech_challenge/scripts/: config.py  extract_data.py  load_data.py  scrape_and_save.py
tech_challenge/tests/: database.ipynb
